syntax = "proto3";
package stride.icacallbacks;

import "gogoproto/gogo.proto";
import "stride/icacallbacks/callback_data.proto";
import "stride/icacallbacks/params.proto";

option go_package = "github.com/Stride-Labs/stride/v27/x/icacallbacks/types";

// GenesisState defines the icacallbacks module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  string port_id = 2;
  repeated CallbackData callback_data_list = 3 [ (gogoproto.nullable) = false ];
}
